base dotfiles done

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,9 +1,10 @@
 - clean: ["~"]
 - link:
     "~/.dotfiles": ""
-    "~/fonts": "fonts"
-    "~/.bash_profile": "bash_profile"
+    "~/.fonts": "fonts"
+    "~/.vimrc": "vimrc"
     "~/.gitconfig": "gitconfig"
     "~/.tmux.conf": "tmux.conf"
-    "~/.vimrc": "vimrc"
+    "~/.bash_profile": "bash_profile"
+    "~/.bashrc": "bashrc"
 - shell: []
