organised .files under directories

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,10 +3,10 @@
     "~/.dotfiles": ""
     "~/.fonts/meslo": "fonts/meslo"
     "~/.fonts/inconsolata": "fonts/inconsolata"
-    "~/.vimrc": "vimrc"
-    "~/.gitconfig": "gitconfig"
-    "~/.tmux.conf": "tmux.conf"
-    "~/.bash_profile": "bash_profile"
-    "~/.bash_aliases": "bash_aliases"
-    "~/.bashrc": "bashrc"
+    "~/.vimrc": "vim/vimrc"
+    "~/.gitconfig": "git/gitconfig"
+    "~/.tmux.conf": "tmux/tmux.conf"
+    "~/.bash_profile": "bash/bash_profile"
+    "~/.bash_aliases": "bash/bash_aliases"
+    "~/.bashrc": "bash/bashrc"
 - shell: []
