--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,4 +9,5 @@
     "~/.bash_profile": "bash/bash_profile"
     "~/.bash_aliases": "bash/bash_aliases"
     "~/.bashrc": "bash/bashrc"
+    "~/.wgetrc": "wget/wgetrc"
 - shell: []
