--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,6 +3,7 @@
     "~/.dotfiles": ""
     "~/.fonts/meslo": "fonts/meslo"
     "~/.fonts/inconsolata": "fonts/inconsolata"
+    "~/.fonts/fixedsys": "fonts/fixedsys"
     "~/.vimrc": "vim/vimrc"
     "~/.gitconfig": "git/gitconfig"
     "~/.tmux.conf": "tmux/tmux.conf"
