--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -4,6 +4,7 @@
     "~/.fonts/meslo": "fonts/meslo"
     "~/.fonts/inconsolata": "fonts/inconsolata"
     "~/.fonts/fixedsys": "fonts/fixedsys"
+    "~/.fonts/input": "fonts/input"
     "~/.vimrc": "vim/vimrc"
     "~/.gitconfig": "git/gitconfig"
     "~/.tmux.conf": "tmux/tmux.conf"
