feat(fonts): adding new code fonts

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -4,6 +4,10 @@
     "~/.fonts/meslo": "fonts/meslo"
     "~/.fonts/inconsolata": "fonts/inconsolata"
     "~/.fonts/firacode": "fonts/firacode"
+    "~/.fonts/dejavu": "fonts/dejavu"
+    "~/.fonts/menlo": "fonts/menlo"
+    "~/.fonts/monaco": "fonts/monaco"
+    "~/.fonts/hack": "fonts/hack"
     "~/.fonts/fixedsys": "fonts/fixedsys"
     "~/.fonts/input": "fonts/input"
     "~/.vimrc": "vim/vimrc"
