feat(font): roboto

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
     "~/.fonts/dejavu": "fonts/dejavu"
     "~/.fonts/menlo": "fonts/menlo"
     "~/.fonts/monaco": "fonts/monaco"
+    "~/.fonts/roboto": "fonts/roboto"
     "~/.fonts/hack": "fonts/hack"
     "~/.fonts/fixedsys": "fonts/fixedsys"
     "~/.fonts/input": "fonts/input"
